# bbug-planning-reporter

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pr-checks.yml  release-build.yml
.sdd/: index.md  project-guidelines.md
.sdd/agent-integration/: design.md  specification.md
.sdd/api-hardening/: design.md  specification.md
.sdd/cherwell-scraper-api/: specification.md
.sdd/ci-cd-github-actions/: design.md  specification.md
.sdd/concise-output/: design.md  specification.md
.sdd/consultation-filter-enforcement/: design.md  specification.md
.sdd/cycle-route-api/: specification.md
.sdd/cycle-route-assessment/: design.md  specification.md
.sdd/deterministic-route-narrative/: design.md  specification.md
.sdd/document-filtering/: design.md  specification.md
.sdd/document-processing/: design.md  specification.md
.sdd/document-store-api/: specification.md
.sdd/document-type-detection/: design.md  specification.md
.sdd/download-filename-fix/: design.md  specification.md
.sdd/foundation-api/: design.md  specification.md
.sdd/global-webhooks/: design.md  specification.md
.sdd/key-documents/: design.md  specification.md
.sdd/key-documents-url-backfill/: design.md  research.md  tasks.md
.sdd/local-dev-setup/: design.md  specification.md
.sdd/overpass-resilience/: design.md  specification.md
.sdd/policy-authority-model/: specification.md
.sdd/policy-ingestion-fix/: design.md  specification.md
.sdd/policy-kb-api/: specification.md
.sdd/policy-knowledge-base/: design.md  specification.md
.sdd/policy-s3-storage/: specification.md
.sdd/reliable-category-filtering/: design.md  specification.md
.sdd/reliable-structure-extraction/: design.md  specification.md
.sdd/response-letter/: design.md  specification.md
.sdd/rest-api-contract/: specification.md
.sdd/review-output-fixes/: design.md  specification.md
.sdd/review-output-urls/: design.md  specification.md
.sdd/review-progress/: design.md  specification.md
.sdd/review-quality-improvements/: design.md  specification.md
.sdd/review-resubmission/: design.md  specification.md
.sdd/review-scope-control/: design.md  specification.md
.sdd/review-workflow-redesign/: design.md  specification.md
.sdd/route-assessment-refinement/: design.md  specification.md
.sdd/route-barrier-filtering/: design.md  specification.md
.sdd/route-dual-routing/: design.md  specification.md
.sdd/route-narrative-report/: design.md  specification.md
.sdd/route-segment-detail/: design.md  specification.md
.sdd/route-segment-geometry/: design.md  specification.md
deploy/: .env.example  PRODUCTION.md  deploy.sh  docker-compose.yml  seed_config.json
docker/: Dockerfile.api  Dockerfile.base  Dockerfile.cycle-route  Dockerfile.document-store  Dockerfile.policy-init  Dockerfile.policy-kb  Dockerfile.scraper  Dockerfile.worker
docs/: API.md  DESIGN.md  LOCAL_DEV.md  mcp-cherwell-scraper.md  mcp-cycle-route.md  mcp-document-store.md  mcp-policy-kb.md
output/: comparison_25-00284-F.md  filtering_test_report_20260207.md  letter_25-00284-F_docker-slim-test.md  ralph_loop_test_summary_20260207.md  review.md  review_25-00284-F_20260207_094833.json  review_25-00284-F_docker-slim-test.json  review_25-00284-F_docker-slim-test.md  review_25-00284-F_full_report.md  review_25-02232-OUT_20260207_083828.json  test_summary_25-00284-F_FINAL.md
reporter/: .env.example  .gitignore  README.md  next.config.mjs  package.json  requirements.txt  tsconfig.json  vercel.json
reporter/app/: layout.tsx  (+1 more)
scripts/: fetch_policies.sh
src/: __init__.py
tests/: conftest.py
(+234 files in other folders)
