[project]
name = "cherwell-cycle-agent"
version = "0.1.0"
description = "AI agent for reviewing Cherwell planning applications from a cycling advocacy perspective"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Bicester Bike Users Group" }
]

dependencies = [
    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Async HTTP client
    "httpx>=0.26.0",

    # HTML parsing
    "beautifulsoup4>=4.12.0",

    # Redis and job queue
    "redis[hiredis]>=5.0.0",
    "arq>=0.25.0",

    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # ID generation
    "python-ulid>=2.2.0",

    # Structured logging
    "structlog>=24.1.0",

    # MCP SDK
    "mcp>=1.0.0",

    # Document processing (Phase 2)
    "pymupdf>=1.23.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.2.0",

    # Vector database and embeddings (Phase 2-3)
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.0",
    "langchain-text-splitters>=0.0.1",

    # PDF generation (Phase 5)
    "weasyprint>=60.0",

    # Anthropic SDK (Phase 4) — >=0.25.0 for tool_choice support
    # Implements [reliable-structure-extraction:NFR-004]
    "anthropic>=0.25.0",

    # S3-compatible object storage
    "boto3>=1.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-httpserver>=1.0.0",
    "fakeredis>=2.21.0",
    "respx>=0.20.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: marks tests as integration tests (may require external services)",
    "e2e: marks tests as end-to-end tests (requires full stack)",
]

# Ruff configuration (linting)
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002"]  # pytest fixtures and callback signatures

[tool.ruff.lint.isort]
known-first-party = ["src"]

# Black configuration (formatting)
[tool.black]
target-version = ["py312"]
line-length = 100

# MyPy configuration (type checking)
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
